Fix learn overview on mobile.

--- a/src/styles/pages/_path.scss
+++ b/src/styles/pages/_path.scss
@@ -4,11 +4,18 @@
 
 .w-path-intro {
   display: flex;
+  flex-direction: column;
+
+  @include bp(md) {
+    flex-direction: row;
+  }
 }
 
 .w-path-intro__overview {
-  flex-basis: 57%;
-  margin-right: 54px;
+  @include bp(md) {
+    flex-basis: 57%;
+    margin-right: 54px;
+  }
 }
 
 .w-path-heading {
